# hashfile-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  get_hashes.sh  server.json
.github/workflows/: release.yml
docs/: ARTICLE.md  IDEA.md  agents-support.md  index.html  registry-publishing.md
src/: agents.rs  agents.rs.orig  config.rs  filesystem.rs  gitignore.rs  hashline.rs  main.rs  roots.rs  tools.rs
tests/: verify_output.rs
tests/fixtures/: AGENTS.md
tests/fixtures/config/: app.json
tests/fixtures/schemas/: api.json
