[package]
name = "hashfile-mcp"
version = "0.2.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.15.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
fnv = "1.0"
